syntax = "proto3";

package milvus.proto.internal;

option go_package="github.com/zilliztech/milvus-distributed/internal/proto/internalpb";

import "internal_msg.proto";
import "google/protobuf/any.proto";

message MsgHeader {
    MsgType msg_type = 1;
    google.protobuf.Any message = 2[lazy=true];
}
